--- a/web/.gitignore
+++ b/web/.gitignore
@@ -4,10 +4,15 @@
 /node_modules
 /.pnp
 .pnp.js
-.yarn/install-state.gz
 
 # testing
 /coverage
+
+# Cypress
+test-results
+cypress/screenshots
+cypress/videos
+cypress.env.json
 
 # next.js
 /.next/
@@ -26,11 +31,10 @@ yarn-debug.log*
 yarn-error.log*
 
 # local env files
-.env*.local
+.env.local
+.env.development.local
+.env.test.local
+.env.production.local
 
 # vercel
 .vercel
-
-# typescript
-*.tsbuildinfo
-next-env.d.ts
