--- a/api/pyproject.toml
+++ b/api/pyproject.toml
@@ -7,12 +7,17 @@ readme = "README.md"
 packages = [{include = "api", from = "src"}]
 
 [tool.poetry.dependencies]
-python = "^3.12"
+python = "~3.10"
 click = "^8.1.7"
 fastapi = "^0.115.0"
 jose = "^1.0.0"
 httpx = "^0.27.2"
+uvicorn = "^0.30.6"
 
+
+
+[tool.poetry.scripts]
+api = "api.cli:cli"
 
 [build-system]
 requires = ["poetry-core"]
