--- a/api/pyproject.toml
+++ b/api/pyproject.toml
@@ -13,6 +13,10 @@ fastapi = "^0.115.0"
 jose = "^1.0.0"
 httpx = "^0.27.2"
 uvicorn = "^0.30.6"
+ariadne = "^0.23.0"
+sqlalchemy = "^2.0.35"
+strawberry-graphql = "^0.242.0"
+asyncpg = "^0.29.0"
 
 
 
