--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -3,10 +3,11 @@ services:
     build: ./api
     volumes:
       - ./api/src/api:/app/api
+      - ./.env:/app/.env
     ports:
       - "8000:8000"
     env_file:
-      - ./api/.env
+      - ./.env
     environment:
       - DATABASE_URL=postgresql+asyncpg://postgres:password@db:5432/postgres
     depends_on:
