--- a/web/package.json
+++ b/web/package.json
@@ -25,6 +25,7 @@
     "dotenv": "^16.0.3",
     "express": "^4.18.2",
     "express-jwt": "^8.0",
+    "fs": "^0.0.1-security",
     "helmet": "^7.1.0",
     "highlight.js": "^11.9.0",
     "jwks-rsa": "^3.1.0",
