--- a/api/pyproject.toml
+++ b/api/pyproject.toml
@@ -34,6 +34,12 @@ unstructured = "^0.16.1"
 libmagic = "^1.0"
 python-jose = "^3.3.0"
 pydantic-settings = "^2.6.0"
+google-cloud-storage = "^2.18.2"
+cachetools = "^5.5.0"
+docker = "^7.1.0"
+aioboto3 = "13.2.0"
+boto3 = "1.35.36"
+aiohttp = "^3.10.10"
 
 
 
