--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -1,17 +1,57 @@
 services:
+
+  # web app (nextjs)
+  web:
+    build: ./web
+    volumes:
+      - ./web/src:/app/src
+      - ./web/public:/app/public
+    ports:
+      - "3001:3000"
+    env_file:
+      - ./.env
+    environment:
+      - API_URL=http://api:8000      
+    depends_on:
+      - api
+
+  # api service
   api:
     build: ./api
     volumes:
       - ./api/src/api:/app/api
       - ./.env:/app/.env
+      # mount docker socket
+      - /var/run/docker.sock:/var/run/docker.sock
     ports:
       - "8000:8000"
     env_file:
-      - ./.env
+      - ./.env    
     environment:
       - DATABASE_URL=postgresql+asyncpg://postgres:password@db:5432/postgres
+      - SERVICES=s3     # Specify which services to run (in this case, S3)
+      - BUCKET_NAME=users
+      - AWS_ACCESS_KEY_ID=test  # Dummy credentials for LocalStack
+      - AWS_SECRET_ACCESS_KEY=test  # Dummy credentials for LocalStack
     depends_on:
       - db
+
+
+  # external seervices 
+  
+  # localstack   
+  localstack:
+    image: localstack/localstack
+    ports:
+      - "4566:4566"    # Main LocalStack API
+      - "4510-4559:4510-4559"  # Ports for additional services
+    environment:
+      - SERVICES=s3   
+      - BUCKET_NAME=users
+      - AWS_ACCESS_KEY_ID=test  # Dummy credentials for LocalStack
+      - AWS_SECRET_ACCESS_KEY=test  # Dummy credentials for LocalStack
+    
+
 
   db:
     image: postgres:13
@@ -29,3 +69,4 @@ services:
 
 volumes:
   postgres_data:
+  localstack_data:
