--- a/api/pyproject.toml
+++ b/api/pyproject.toml
@@ -40,6 +40,8 @@ docker = "^7.1.0"
 aioboto3 = "13.2.0"
 boto3 = "1.35.36"
 aiohttp = "^3.10.10"
+stripe = "^11.2.0"
+pandas = "^2.2.3"
 
 
 
@@ -49,6 +51,7 @@ api = "api.cli:cli"
 [tool.poetry.group.dev.dependencies]
 isort = "^5.13.2"
 black = "^24.10.0"
+bandit = "^1.7.10"
 
 [build-system]
 requires = ["poetry-core"]
