--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -54,19 +54,22 @@ services:
 
 
   db:
-    image: postgres:13
+    build:
+      context: ./vectordb
+      dockerfile: Dockerfile
     environment:
       POSTGRES_USER: postgres
-      POSTGRES_PASSWORD: password
+      POSTGRES_PASSWORD: postgres
       POSTGRES_DB: postgres
     volumes:
-      - postgres_data:/var/lib/postgresql/data
+      - vectordb:/var/lib/postgresql/data
     healthcheck:
       test: ["CMD-SHELL", "pg_isready -U postgres"]
       interval: 10s
       timeout: 5s
       retries: 5
-
+    
 volumes:
   postgres_data:
   localstack_data:
+  vectordb:
