--- a/.env
+++ b/.env
@@ -3,7 +3,7 @@
 # AUTH0_ISSUER_BASE_URL='https://dev-cfhyeddof3167alv.eu.auth0.com'
 # AUTH0_CLIENT_ID='gMPJOE9uzvKaevRW528bNrXARD2Obzfa'
 # AUTH0_CLIENT_SECRET='_00_e6p3CT2hfE1DgVAyK2pLpCn_VJIcznRlUyZV6vpHAeoUXgHY85ZNaLSefQl7'
-AUTH0_AUDIENCE='https://shredit.com/api''
+AUTH0_AUDIENCE="https://shredit.com/api'"
 
 
 AUTH0_SECRET="_00_e6p3CT2hfE1DgVAyK2pLpCn_VJIcznRlUyZV6vpHAeoUXgHY85ZNaLSefQl7"
@@ -17,3 +17,5 @@ AUTH0_API_AUDIENCE="https://shredit.com/api"
 AUTH0_ISSUER="https://dev-cfhyeddof3167alv.eu.auth0.com"
 AUTH0_ALGORITHMS="RS256"
 AUTH0_AUDIENCE="https://shredit.com/api"
+
+OPENAI_API_KEY="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"
