--- a/.env
+++ b/.env
@@ -18,4 +18,4 @@ AUTH0_ISSUER="https://dev-cfhyeddof3167alv.eu.auth0.com"
 AUTH0_ALGORITHMS="RS256"
 AUTH0_AUDIENCE="https://shredit.com/api"
 
-OPENAI_API_KEY="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"
+# OPENAI_API_KEY="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"
